Changes committed for most of the pages

--- a/src/app/pages/about/about.html
+++ b/src/app/pages/about/about.html
@@ -21,7 +21,7 @@
         <div class="line"></div>
 
         <p class="fs-6 text-secondary lh-lg">
-          Vivekanand Pratishthan's Dr. Avinash Acharya Vidyayal stands as a beacon of educational
+          Vivekanand Pratishthan's Dr. Avinash Acharya Vidyalay stands as a beacon of educational
           excellence, catering to students from pre-primary to primary levels. Established under the
           esteemed banner of Vivekanand Pratishthan, the institution is driven by a steadfast
           commitment to providing top-notch education that transcends mere academics. Here, the
@@ -30,7 +30,7 @@
         </p>
 
         <p class="fs-6 text-secondary lh-lg">
-          At the core of Dr. Avinash Acharya Vidyayal's educational philosophy is a dynamic
+          At the core of Dr. Avinash Acharya Vidyalaya's educational philosophy is a dynamic
           curriculum meticulously crafted to stimulate creativity, foster critical thinking, and
           instill moral values in students. This curriculum serves as a guiding light, empowering
           young learners with the skills and knowledge essential for navigating the complexities of
@@ -42,11 +42,11 @@
 
         <p class="fs-6 text-secondary lh-lg">
           Driven by the belief that education is the cornerstone of societal progress, Dr. Avinash
-          Acharya Vidyayal is dedicated to nurturing a generation of leaders who will contribute
+          Acharya Vidyalaya is dedicated to nurturing a generation of leaders who will contribute
           positively to the betterment of society. By providing a conducive learning environment,
           encouraging active parental involvement, and fostering a deep sense of social
           responsibility, the school aims to empower its students to become catalysts for positive
-          change in their communities and beyond. In essence, Dr. Avinash Acharya Vidyayal embodies
+          change in their communities and beyond. In essence, Dr. Avinash Acharya Vidyalaya embodies
           the vision of Vivekanand Pratishthan, striving to mold compassionate, responsible, and
           globally aware individuals who will shape a brighter future for generations to come.
         </p>
