--- a/src/app/pages/achievements/achievements.html
+++ b/src/app/pages/achievements/achievements.html
@@ -1,1 +1,47 @@
-<p>achievements works!</p>
+<div class="container">
+    <h3 class="mt-5  text-danger text-center">Achievements 2025 - 26</h3>
+    <div class="line mx-auto"></div>
+    <div class="row g-4">
+
+    <!-- Item 1 -->
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <img src="assets/images/achivements/1.jpg" class="img-fluid mx-auto d-block" alt="">
+      <p class="text-center mt-2 small fw-semibold">
+        बालरंगभूमी परिषद, मुंबई. जळगाव शाखा इतिहास महाराष्ट्राचा यात हृदया अजित चव्हाण प्रथम क्रमांक
+      </p>
+    </div>
+
+    <!-- Item 2 -->
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <img src="assets/images/achivements/2.jpg" class="img-fluid mx-auto d-block" alt="">
+      <p class="text-center mt-2 small fw-semibold">
+       ए. टी. झाबरे विद्यालय आयोजित शालेय नाट्यछटा स्पर्धेत तृतीय क्रमांक. प्रांजल हेमंत पिंपळे
+      </p>
+    </div>
+
+    <!-- Item 3 -->
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <img src="assets/images/achivements/3.jpg" class="img-fluid mx-auto d-block" alt="">
+      <p class="text-center mt-2 small fw-semibold">
+       रेडियो मनभावन 90.1 FM मु. जे. महाविद्यालय येथे जागर स्त्री शक्तीचा सादरीकरण.
+      </p>
+    </div>
+
+    <!-- Item 4 -->
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <img src="assets/images/achivements/4.jpg" class="img-fluid mx-auto d-block" alt="">
+      <p class="text-center mt-2 small fw-semibold">
+       डॉ. अविनाश आचार्य विद्यालयातील विद्यार्थिनींनी केशव स्मृती प्रतिष्ठान आयोजित भुलाबाई महोत्सव 2025-26 मध्ये सौ. संध्या काटोले पायघन लिखित संदेशयुक्त गीतावर टिपऱ्या नृत्य सादर करून प्राथमिक गटात प्रथम क्रमांक व ५००० रुपये बक्षीस मिळवले.
+      </p>
+    </div>
+
+    <!-- Item 5 -->
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <img src="assets/images/achivements/5.jpg" class="img-fluid mx-auto d-block" alt="">
+      <p class="text-center mt-2 small fw-semibold fw-semibold">
+        दुर्वा प्रसाद देसाई (डॉ. अविनाश आचार्य विद्यालय, जळगाव) हिने जल्लोष लोककलेचा 2025 महोत्सवातील लोकनृत्य स्पर्धेत वारी आधारित सादरीकरणासाठी उत्तम सादरीकरणाचे पारितोषिक जिंकले.
+      </p>
+    </div>
+
+  </div>
+</div>
