--- a/src/app/pages/section/primary/primary.html
+++ b/src/app/pages/section/primary/primary.html
@@ -1,1 +1,194 @@
-<p>primary works!</p>
+<div class="container">
+  <h4 class="text-danger mt-5">Interactive Class</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/interactive.jpg"
+        alt="interactive class"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        The interactive classroom is a hub of engaging and collaborative learning experiences.
+        Through interactive whiteboards, multimedia presentations, and educational software,
+        students participate in dynamic lessons that bring subjects to life.
+      </p>
+      <p>
+        They actively engage with the curriculum, answering questions, solving problems, and
+        exploring concepts through hands-on activities. The interactive nature of the classroom
+        fosters a sense of curiosity and enthusiasm among students, encouraging them to ask
+        questions, share ideas, and collaborate with their peers.
+      </p>
+      <p>
+        Whether they're embarking on virtual field trips, participating in interactive quizzes, or
+        conducting science experiments, the interactive classroom provides a stimulating environment
+        where every student can actively participate in their own learning journey.
+      </p>
+    </div>
+  </div>
+  <h4 class="text-danger">Computer</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/computer.png"
+        alt="computer"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        The computer lab serves as a gateway to the world of technology and digital literacy. Here,
+        students embark on exciting learning adventures, exploring fundamental computer skills such
+        as typing, navigating software interfaces, and conducting basic research.
+      </p>
+      <p>
+        Through interactive lessons and hands-on activities, they learn to harness the power of
+        technology to enhance their learning experiences and develop essential 21st-century skills
+        such as critical thinking, problem-solving, and collaboration.
+      </p>
+      <p>
+        Whether they are coding simple programs, creating multimedia presentations, or conducting
+        virtual experiments, the computer lab provides a dynamic environment where students can
+        unleash their creativity and curiosity while preparing for success in an increasingly
+        digital world.
+      </p>
+    </div>
+  </div>
+  <h4 class="text-danger">Music</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/music.png"
+        alt="music"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        In the vibrant world of music at Dr. Avinash Acharya Vidyalay’s primary section, students
+        embark on a melodic journey exploring rhythm, melody, and harmony.
+      </p>
+      <p>
+        Through engaging lessons and hands-on experiences, they discover the joy of playing various
+        musical instruments, harmonizing in choirs, and expressing themselves through song.
+      </p>
+      <p>
+        From learning traditional Indian melodies to experimenting with global rhythms, music
+        becomes a vehicle for self-expression, creativity, and cultural appreciation, enriching
+        their lives with the universal language of melody.
+      </p>
+    </div>
+  </div>
+  <h4 class="text-danger">Drawing</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/drawing.png"
+        alt="drawing"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        In the colorful realm of drawing, young artists at Dr. Avinash Acharya Vidyalay’s primary
+        section unleash their imagination and creativity on canvas.
+      </p>
+      <p>
+        Guided by skilled instructors, they explore a variety of artistic techniques, from sketching
+        and shading to painting and mixed media.
+      </p>
+      <p>
+        With each stroke of the brush and each line drawn, they learn to communicate their thoughts,
+        emotions, and observations visually, cultivating a deep appreciation for the beauty and
+        power of art as a means of expression and communication.
+      </p>
+    </div>
+  </div>
+  <h4 class="text-danger">Dance</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/dance.jpg"
+        alt="dance"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        In the dynamic world of dance, students at Dr. Avinash Acharya Vidyalay’s primary section
+        embark on a journey of movement, rhythm, and expression.
+      </p>
+      <p>
+        Through a diverse range of dance styles, from classical Indian forms to contemporary genres,
+        they learn the art of storytelling through motion, mastering intricate choreography and
+        developing poise, grace, and stage presence.
+      </p>
+      <p>
+        As they sway to the rhythm of the music, dance becomes a celebration of culture, a form of
+        physical fitness, and a source of joy and self-confidence, enriching their lives with the
+        transformative power of movement.
+      </p>
+    </div>
+  </div>
+  <h4 class="text-danger">Art & Craft</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/art.jpg"
+        alt="art and craft"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        In the imaginative world of art and craft, young creators at Dr. Avinash Acharya Vidyalay’s
+        primary section explore a myriad of materials and techniques to bring their artistic visions
+        to life.
+      </p>
+      <p>
+        From sculpting and pottery to paper crafting and textile art, they unleash their creativity,
+        honing their fine motor skills and cultivating a deep appreciation for craftsmanship and
+        aesthetics.
+      </p>
+      <p>
+        Through hands-on projects and guided experimentation, they learn to think critically, solve
+        problems creatively, and transform everyday objects into works of art, nurturing a lifelong
+        passion for creativity and innovation.
+      </p>
+    </div>
+  </div>
+  <h4 class="text-danger">Reading</h4>
+  <div class="line mb-3"></div>
+  <div class="row mb-5">
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <img
+        src="assets/images/primary section/reading.png"
+        alt="reading"
+        class="img-fluid rounded-4 shadow w-75 mx-5"
+      />
+    </div>
+    <div class="col-lg-8 col-md-12 col-sm-12">
+      <p>
+        In the enchanting world of reading, students at Dr. Avinash Acharya Vidyalay’s primary
+        section embark on exciting literary adventures, diving into a treasure trove of stories,
+        poems, and informational texts.
+      </p>
+      <p>
+        Guided by passionate educators, they develop essential literacy skills, such as decoding,
+        fluency, and comprehension, while exploring diverse genres and authors.
+      </p>
+      <p>
+        With each turn of the page, they expand their horizons, broaden their perspectives, and
+        ignite their imaginations, discovering the transformative power of reading to educate,
+        inspire, and empower them on their journey of lifelong learning.
+      </p>
+    </div>
+  </div>
+</div>
