--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,41 +1,78 @@
-<header class="navbar">
-  <!-- Left: Logo + Name -->
-  <div class="logo-area">
-    <img src="assets/images/navbar.png" alt="School Logo" class="" />
-    <!-- <div class="school-name">
-      <span class="title">Vivekanand Pratishthan’s</span>
-      <span class="subtitle">Dr Avinash Acharya Vidyalay</span>
-    </div> -->
+<nav class="navbar navbar-expand-lg bg-white px-4">
+  <div class="container-fluid">
+
+    <!-- Logo -->
+    <a class="navbar-brand" href="#">
+      <img src="assets/images/navbar.png" height="50" />
+    </a>
+
+    <!-- Hamburger button -->
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#mainNavbar"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Collapsible Menu -->
+    <div class="collapse navbar-collapse" id="mainNavbar">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/">HOME</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/about">ABOUT US</a>
+        </li>
+
+        <!-- SECTION Dropdown -->
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            role="button"
+            data-bs-toggle="dropdown"
+          >
+            SECTION
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/section/pre-primary">Pre Primary</a></li>
+            <li><a class="dropdown-item" routerLink="/section/primary">Primary</a></li>
+          </ul>
+        </li>
+
+        <!-- ACADEMICS Dropdown -->
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            role="button"
+            data-bs-toggle="dropdown"
+          >
+            ACADEMICS
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" routerLink="/academics/pre-primary">Pre Primary</a></li>
+            <li><a class="dropdown-item" routerLink="/academics/primary">Primary</a></li>
+          </ul>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/achievements">ACHIEVEMENTS</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/events-news">EVENTS & NEWS</a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/contact-us">CONTACT US</a>
+        </li>
+
+      </ul>
+    </div>
   </div>
+</nav>
 
-  <!-- Right: Menu -->
-  <nav class="menu">
-    <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">HOME</a>
-    <a routerLink="/about" routerLinkActive="active">ABOUT US</a>
-
-    <!-- SECTION DROPDOWN -->
-    <div class="dropdown">
-      <span class="dropdown-title">SECTION ▾</span>
-      <div class="dropdown-menu">
-        <a routerLink="/section/pre-primary">Pre Primary Section</a>
-        <a routerLink="/section/primary">Primary Section</a>
-      </div>
-    </div>
-
-    <!-- ACADEMICS DROPDOWN -->
-    <div class="dropdown">
-      <span class="dropdown-title">ACADEMICS ▾</span>
-      <div class="dropdown-menu">
-        <a routerLink="/academics/pre-primary">Pre Primary Academics</a>
-        <a routerLink="/academics/primary">Primary Academics</a>
-      </div>
-    </div>
-
-    <a routerLink="/achievements" routerLinkActive="active">ACHIEVEMENTS</a>
-    <a routerLink="/events-news" routerLinkActive="active">EVENTS & NEWS</a>
-    <a routerLink="/contact-us" routerLinkActive="active">CONTACT US</a>
-  </nav>
-</header>
-
-<!-- Bottom Yellow Line -->
-<div class="bottom-line"></div>
+<div class="bg-warning" style="height:4px"></div>
