--- a/src/app/pages/events-news/events-news.html
+++ b/src/app/pages/events-news/events-news.html
@@ -1,1 +1,20 @@
-<p>events-news works!</p>
+<div class="container">
+  <h3 class="mt-5 text-danger">Achievements 2025 - 26</h3>
+  <div class="line "></div>
+   <div class="row g-4">
+
+    
+   <div class="row g-4">
+  @for (img of images; track img) {
+    <div class="col-lg-4 col-md-6 col-sm-6 my-3 ">
+      <img
+        [src]="'assets/images/events/' + img + '.jpg'"
+        class="img-fluid mx-auto d-block border border-black"
+        [alt]="'Image ' + img"
+      >
+    </div>
+  }
+</div>
+
+  </div>
+</div>
