--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -21,11 +21,11 @@
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/">HOME</a>
+          <a class="nav-link" routerLink="/"    (click)="closeNavbar()">HOME</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about">ABOUT US</a>
+          <a class="nav-link" routerLink="/about"    (click)="closeNavbar()">ABOUT US</a>
         </li>
 
         <!-- SECTION Dropdown -->
@@ -38,8 +38,8 @@
             SECTION
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/section/pre-primary">Pre Primary</a></li>
-            <li><a class="dropdown-item" routerLink="/section/primary">Primary</a></li>
+            <li><a class="dropdown-item" routerLink="/section/pre-primary"   (click)="closeNavbar()">Pre Primary</a></li>
+            <li><a class="dropdown-item" routerLink="/section/primary"   (click)="closeNavbar()">Primary</a></li>
           </ul>
         </li>
 
@@ -53,21 +53,21 @@
             ACADEMICS
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" routerLink="/academics/pre-primary">Pre Primary</a></li>
-            <li><a class="dropdown-item" routerLink="/academics/primary">Primary</a></li>
+            <li><a class="dropdown-item" routerLink="/academics/pre-primary"   (click)="closeNavbar()">Pre Primary</a></li>
+            <li><a class="dropdown-item" routerLink="/academics/primary"   (click)="closeNavbar()">Primary</a></li>
           </ul>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/achievements">ACHIEVEMENTS</a>
+          <a class="nav-link" routerLink="/achievements"   (click)="closeNavbar()">ACHIEVEMENTS</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/events-news">EVENTS & NEWS</a>
+          <a class="nav-link" routerLink="/events-news"   (click)="closeNavbar()">EVENTS & NEWS</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact-us">CONTACT US</a>
+          <a class="nav-link" routerLink="/contact-us"   (click)="closeNavbar()">CONTACT US</a>
         </li>
 
       </ul>
