--- a/src/app/pages/events-news/events-news.html
+++ b/src/app/pages/events-news/events-news.html
@@ -1,6 +1,6 @@
 <div class="container">
-  <h3 class="mt-5 text-danger">Achievements 2025 - 26</h3>
-  <div class="line "></div>
+  <h3 class="mt-5 text-danger text-center">Achievements 2025 - 26</h3>
+  <div class="line mx-auto"></div>
    <div class="row g-4">
 
     
