--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -3,7 +3,7 @@
 
     <!-- Logo -->
     <a class="navbar-brand" href="#">
-      <img src="assets/images/navbar.png" height="70" />
+      <img src="assets/images/navbar.png" class="no-hover" height="70" />
     </a>
 
     <!-- Hamburger button -->
