home img change

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-6 col-sm-12 text-center my-4">
-      <img src="assets/images/primaryschool.png" alt="About Us" class="img-fluid h-100 w-75" />
+      <img src="assets/images/VP-9.png" alt="About Us" class=" img-fluid h-100 w-100 rounded-4 shadow shadow-lg" />
     </div>
     <div class="col-md-6 col-sm-12 mt-5">
       <h2 class="text-danger fw-bold">About Us</h2>
