--- a/src/app/pages/events-news/events-news.html
+++ b/src/app/pages/events-news/events-news.html
@@ -9,7 +9,7 @@
     <div class="col-lg-4 col-md-6 col-sm-6 my-3 ">
       <img
         [src]="'assets/images/events/' + img + '.jpg'"
-        class="img-fluid mx-auto d-block border border-black"
+        class="img-fluid mx-auto d-block "
         [alt]="'Image ' + img"
       >
     </div>
