--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mb-5">
   <div class="row">
     <div class="col-md-6 col-sm-12 text-center my-4">
       <img src="assets/images/VP-9.png" alt="About Us" class=" img-fluid h-100 w-100 rounded-4 shadow shadow-lg" />
@@ -15,7 +15,7 @@
       <a class="btn btn-warning" [routerLink]="['/about']" href="/about">Read More</a>
     </div>
   </div>
-  <div class="text-center">
+  <div class="text-center mt-5 mb-5">
     <!-- Rocket icon with pulsing circle -->
     <div class="rocket-circle-container">
       <i class="fa-sharp-duotone fa-solid fa-rocket fa-4x text-black mt-4 sizeadjust"></i>
@@ -41,7 +41,7 @@
   
 </div>
 <!-- our inspiration -->
-<div class="bg-inspiration  p-4">
+<div class="bg-inspiration rounded   p-4 mt-5">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <h2 class="text-white">Our Inspiration</h2>
@@ -61,7 +61,7 @@
         >
       </div>
       <div class="col-md-6 col-sm-12 d-flex justify-content-center align-items-center">
-        <img src="assets/images/founder-img.jpg" alt="founder-img" class="h-100 w-50" />
+        <img src="assets/images/founder-img.jpg" alt="founder-img" class="h-100 w-50 rounded" />
       </div>
     </div>
   </div>
@@ -102,7 +102,7 @@
     </div>
   </div>
 </div>
-<div class="container">
+<div class="container mt-5">
     <div class="mb-5">
     <h2 class="text-danger fw-bold">Our Objectives</h2>
     <div class="line"></div>
@@ -111,7 +111,7 @@
   <img src="assets/images/Objective.jpg" alt="Objectives"  />
   </div>
 </div>
-<section class="py-5 bg-white">
+<section class="py-5 bg-white mt-5">
   <div class="container">
 
     <!-- Title -->
