--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="container">
+<div class="container-fluid p-0">
   <router-outlet></router-outlet>
 </div>
 
