--- a/src/app/pages/contact-us/contact-us.html
+++ b/src/app/pages/contact-us/contact-us.html
@@ -1,54 +1,49 @@
-<div class="container my-5">
-  <div class="row align-items-stretch shadow rounded overflow-hidden">
+<div class="container my-5 contact-section">
+  <div class="row align-items-stretch contact-wrapper">
 
     <!-- Contact Info -->
-    <div class="col-lg-4 p-5 text-white contact-box">
-      <h3 class="fw-bold mb-4">Contact Us</h3>
+    <div class="col-lg-4 p-5 contact-box glass-card">
+      <h3 class="fw-bold mb-4 contact-title">Contact Us</h3>
 
-      <div class="d-flex mb-4">
-        <div class="icon-circle me-3">
-          <i class="fa-solid fa-building"></i>
+      <div class="contact-item">
+        <div class="icon-circle">
+          <i class="fa-solid fa-building text-light"></i>
         </div>
         <div>
           <h6 class="fw-bold mb-1">Address</h6>
-          <p class="mb-0">
-            66, Suyog Colony, Jalgaon 425001
-          </p>
+          <p class="mb-0">66, Suyog Colony, Jalgaon 425001</p>
         </div>
       </div>
 
-      <div class="d-flex mb-4">
-        <div class="icon-circle me-3">
-          <i class="fa-solid fa-phone"></i>
+      <div class="contact-item">
+        <div class="icon-circle">
+          <i class="fa-solid fa-phone text-light"></i>
         </div>
         <div>
           <h6 class="fw-bold mb-1">Call Us</h6>
-          <p class="mb-0">0257-2239012</p>
+          <p class="mb-0">0257-2239014</p>
         </div>
       </div>
 
-      <div class="d-flex">
-        <div class="icon-circle me-3">
-          <i class="fa-solid fa-envelope"></i>
+      <div class="contact-item">
+        <div class="icon-circle">
+          <i class="fa-solid fa-envelope text-light"></i>
         </div>
         <div>
           <h6 class="fw-bold mb-1">Email Us</h6>
-          <p class="mb-0">vivekanand@vpjal.com</p>
+          <p class="mb-0">contact@vivekanandpratishthan.com</p>
         </div>
       </div>
     </div>
 
     <!-- Google Map -->
-    <div class="col-lg-8 p-0">
-     <iframe
-    src="https://www.google.com/maps?q=Vivekanand+Pratishthan+Suyog+Colony+Jalgaon&z=16&output=embed"
-    width="100%"
-    height="100%"
-    style="border:0;"
-    allowfullscreen=""
-    loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade">
-  </iframe>
+    <div class="col-lg-8 p-0 map-wrapper">
+      <div class=""></div>
+      <iframe
+        src="https://www.google.com/maps?q=Vivekanand+Pratishthan+66+Shivram+Nagar+Suyog+Colony+Jalgaon+425002&z=16&output=embed"
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
     </div>
 
   </div>
